fix: change object-position of images to bottom for better alignment

--- a/src/styles/layout/album.css
+++ b/src/styles/layout/album.css
@@ -24,7 +24,7 @@
 		}
 		& img {
 			object-fit: cover;
-			object-position: top;
+			object-position: bottom;
 			transition: all 0.5s ease;
 			filter: var(--img-hover);
 
