--- a/src/styles/layout/photos.css
+++ b/src/styles/layout/photos.css
@@ -53,7 +53,7 @@
 			max-block-size: 100%;
 			transition: all 0.5s ease;
 			object-fit: cover;
-			object-position: top;
+			object-position: bottom;
 			filter: var(--img-hover);
 		}
 		&:is(:focus-visible, :hover) {
